<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtherActivities.ContactUsActivity"
    tools:layout_editor_absoluteY="65dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="55dp"
                android:paddingStart="3dp"
                android:text="@string/contact_form_name"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/contact_your_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <EditText

                android:id="@+id/contact_your_name"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/style_border"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"

                android:text="@string/contact_form_email"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/contact_your_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_your_name"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/contact_your_email"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/style_border"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:text="@string/contact_form_subject"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/contact_your_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_your_email"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/contact_your_subject"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/style_border"
                android:gravity="center_vertical"
                android:inputType="text"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:text="@string/contact_form_message"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/contact_your_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_your_subject"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/contact_your_message"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_marginBottom="38dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/style_border"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/post_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="42dp"
                android:background="@drawable/style_roundedbutton"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contact_your_message" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>